fixed margin on wrap for mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -89,7 +89,7 @@ span {
 .wrap {
   max-width: 960px;
   margin: 0 auto;
-  margin-top: 80px;
+  /*margin-top: 80px;*/
 }
 
 .unit {
